# FluxFlasher

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  build.sh  cbindgen.toml
cpp/: core_interface.cpp  core_interface.h  main.cpp  mainwindow.cpp  mainwindow.h
cpp/dialogs/: confirmdialog.cpp  confirmdialog.h  devicedialog.cpp  devicedialog.h  messagedialog.cpp  messagedialog.h  settingsdialog.cpp  settingsdialog.h
cpp/widgets/: progressview.cpp  progressview.h  stepcard.cpp  stepcard.h
src/: lib.rs  main.rs.broken  main.rs.old
src/core/: device.rs  flash.rs  mod.rs  utils.rs  verify.rs
